--- a/assets/styles/tailwind.css
+++ b/assets/styles/tailwind.css
@@ -182,32 +182,17 @@
   .sticky {
     position: sticky;
   }
-  .-z-7 {
-    z-index: calc(7 * -1);
-  }
-  .z-2 {
-    z-index: 2;
-  }
   .z-4 {
     z-index: 4;
   }
   .z-5 {
     z-index: 5;
   }
-  .\!m-9 {
-    margin: calc(var(--spacing) * 9) !important;
-  }
   .m-0 {
     margin: calc(var(--spacing) * 0);
   }
   .m-2 {
     margin: calc(var(--spacing) * 2);
-  }
-  .m-3 {
-    margin: calc(var(--spacing) * 3);
-  }
-  .m-5 {
-    margin: calc(var(--spacing) * 5);
   }
   .m-6 {
     margin: calc(var(--spacing) * 6);
@@ -236,35 +221,11 @@
   .table {
     display: table;
   }
-  .h-5 {
-    height: calc(var(--spacing) * 5);
-  }
-  .h-30 {
-    height: calc(var(--spacing) * 30);
-  }
-  .h-fit {
-    height: fit-content;
-  }
-  .w-2 {
-    width: calc(var(--spacing) * 2);
-  }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
+  .\!w-6 {
+    width: calc(var(--spacing) * 6) !important;
   }
   .w-4 {
     width: calc(var(--spacing) * 4);
-  }
-  .w-5 {
-    width: calc(var(--spacing) * 5);
-  }
-  .w-6 {
-    width: calc(var(--spacing) * 6);
-  }
-  .w-9 {
-    width: calc(var(--spacing) * 9);
-  }
-  .w-30 {
-    width: calc(var(--spacing) * 30);
   }
   .w-\[20rem\] {
     width: 20rem;
@@ -302,12 +263,6 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .p-0 {
-    padding: calc(var(--spacing) * 0);
-  }
-  .p-2 {
-    padding: calc(var(--spacing) * 2);
-  }
   .p-3 {
     padding: calc(var(--spacing) * 3);
   }
@@ -316,12 +271,6 @@
   }
   .p-5 {
     padding: calc(var(--spacing) * 5);
-  }
-  .p-6 {
-    padding: calc(var(--spacing) * 6);
-  }
-  .p-7 {
-    padding: calc(var(--spacing) * 7);
   }
   .p-8 {
     padding: calc(var(--spacing) * 8);
@@ -372,6 +321,27 @@
         @media (hover: hover) {
           text-decoration-line: underline;
         }
+      }
+    }
+  }
+  .\*\*\:\[\&\.typst-doc\]\:fill-white {
+    :is(& *) {
+      &.typst-doc {
+        fill: var(--color-white);
+      }
+    }
+  }
+  .\*\:\[\&\.typst-text\]\:fill-white {
+    :is(& > *) {
+      &.typst-text {
+        fill: var(--color-white);
+      }
+    }
+  }
+  .\*\*\:\[\&\.typst-text\]\:fill-white {
+    :is(& *) {
+      &.typst-text {
+        fill: var(--color-white);
       }
     }
   }
