--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,6 +1,42 @@
 * {
 	font-family: "Maple Mono NF CN";
 	color-scheme: dark;
-	/* line-height: 1.4em; */
+}
+
+body {
+	@apply bg-ink-purple;
+}
+
+p {
+	margin: 20px 0px 20px;
+	opacity: 0;
+	opacity: 0.9;
+}
+
+blockquote {
+	border-left: 4px solid #ddd;
+	color: #bbb;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding: 0 15px;
+	font-weight: 450;
+	opacity: 0.66;
+}
+
+ul {
+	list-style: disc;
+	padding-left: 28px;
+	margin-top: 12px;
+	margin-bottom: 12px;
+}
+
+ol {
+	list-style: decimal;
+	padding-left: 50px;
+}
+
+li {
+	opacity: 0.92;
+	line-height: 1.3em;
 }
 
