--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -8,9 +8,7 @@ body {
 }
 
 p {
-	margin: 20px 0px 20px;
-	opacity: 0;
-	opacity: 0.9;
+	@apply m-4;
 }
 
 blockquote {
@@ -24,19 +22,13 @@ blockquote {
 }
 
 ul {
-	list-style: disc;
-	padding-left: 28px;
-	margin-top: 12px;
-	margin-bottom: 12px;
+	@apply list-disc ml-10 mr-6;
 }
 
 ol {
-	list-style: decimal;
-	padding-left: 50px;
+	@apply list-decimal;
 }
 
 li {
-	opacity: 0.92;
-	line-height: 1.3em;
 }
 
